Fix nav-with-icons anchor overflow on mobile view

--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Lato', sans-serif;
-    background: #f1f1f1;;
+    background: #eaeaea;;
     color: #434343;
+    padding: 0 15px;
 }
 
 h1 {
