--- a/css/nav-with-icons.css
+++ b/css/nav-with-icons.css
@@ -2,7 +2,7 @@
 
 .nav-with-icons li a {
     display: flex;
-    width: 100%;
+    /*width: 100%;*/
 }
 
 .nav-with-icons .button-icon {
@@ -16,6 +16,11 @@
 }
 
 @media screen and (min-width: 30em) {
+
+    .nav-with-icons li a {
+        width: 100%;
+    }
+
     .nav-with-icons ul {
         display: flex;
         flex-wrap: wrap;
